--- a/index.html
+++ b/index.html
@@ -1,56 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的網頁</title>
-    <style>
-        /* 在這裡添加你的 CSS 樣式 */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <title>投資網站</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
-<header>
-    <h1>歡迎來到我的網站</h1>
-</header>
-
-<div class="container">
-    <h2>這裡是內容區域</h2>
-    <p>你可以在這裡放置你的內容。</p>
-</div>
-
-<footer>
-    <p>版權所有 &copy; 2024</p>
-</footer>
-
+    <header>
+        <h1>AI與科技股投資專家團隊</h1>
+    </header>
+    <main>
+        <section>
+            <h2>歡迎加入我們的投資群組</h2>
+            <p>親愛的投資者，您好！我們帶來了一個前所未有的投資機會。近期，AI領域的領導者、Nvidia的創始人兼CEO黃仁勳，強力推薦了一系列AI相關的投資標的。這些標的被預測在未來數月內將帶來豐厚回報。</p>
+            <p>我們的專業投資群組已經與黃仁勳及其團隊緊密合作，為您提供最前沿的市場分析和獨家的投資建議。加入我們的投資群組，您將獲得以下收益：</p>
+            <ul>
+                <li>黃仁勳親自推薦的AI股票清單</li>
+                <li>新檔ETF成分股的獨家分析與投資建議</li>
+                <li>實時的市場走勢和數據分析</li>
+                <li>與其他頂尖投資者的交流和討論</li>
+                <li>專業投資顧問的個性化建議</li>
+            </ul>
+            <a href="join.html" class="button">立即加入AI與科技股投資群組</a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 AI與科技股投資專家團隊</p>
+    </footer>
 </body>
-</html>
