--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li>與其他頂尖投資者的交流和討論</li>
                 <li>專業投資顧問的個性化建議</li>
             </ul>
-            <a href="join.html" class="button">立即加入AI與科技股投資群組</a>
+            <a href="order.html" class="button">立即投資AI概念股!!</a>
         </section>
     </main>
     <footer>
