--- a/order.html
+++ b/order.html
@@ -26,7 +26,17 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 AI與科技股投資專家團隊</p>
-    </footer>
+    <p>&copy; 2024 AI與科技股投資專家團隊</p>
+    <div class="social-media">
+        <a href="#"><i class="fa fa-facebook"></i> Facebook</a>
+        <a href="#"><i class="fa fa-twitter"></i> Twitter</a>
+        <a href="#"><i class="fa fa-linkedin"></i> LinkedIn</a>
+    </div>
+    <div class="footer-links">
+        <a href="about.html">關於我們</a>
+        <a href="contact.html">聯繫我們</a>
+        <a href="privacy.html">隱私政策</a>
+    </div>
+</footer>
 </body>
 </html>
