add linkedin icon, revise contact

--- a/post.html
+++ b/post.html
@@ -143,6 +143,14 @@
                                 </a>
                             </li> -->
                             <li class="list-inline-item">
+                                <a href="https://www.linkedin.com/in/david-117073237">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
                                 <a href="https://github.com/bbOwOdd">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
