revise about me

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Me</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <span class="subheading">This is who I am.</span>
                         </div>
                     </div>
                 </div>
@@ -52,8 +52,16 @@
         <main class="mb-4">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>NTUT Master & Bachelor degree major in Information Management in 🇹🇼. Exchange student major in Computer Science at TUHH in 🇩🇪 & at CTH in 🇸🇪.</p>
+                    <div class="col-md-10 col-lg-8 col-xl-4">
+                        <p>NTUT Master & Bachelor degree major in Information Management in Taiwan. 
+                            Exchange student major in Computer Science at TUHH in Germany & at CTH in Sweden.
+                        </p>
+                    </div>
+                    <div class="col-md-10 col-lg-8 col-xl-4">
+                        <p>Skill: C/C++, C#, Python, Java, ASP.NET, Git, Shell</p>
+                    </div>
+                    <div class="col-md-10 col-lg-8 col-xl-4">
+                        <p>Interest: Artificial Intelligence, Cybersecurity, Software Development</p>
                     </div>
                 </div>
             </div>
