--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-4">
-                        <p>NTUT Master & Bachelor degree major in Information Management in Taiwan. 
+                        <p>Master & Bachelor degree major in Information Management at NTUT in Taiwan. 
                             Exchange student major in Computer Science at TUHH in Germany & at CTH in Sweden.
                         </p>
                     </div>
