add skill in about

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                         </p>
                     </div>
                     <div class="col-md-10 col-lg-8 col-xl-4">
-                        <p>Skill: C/C++, C#, Python, Java, ASP.NET, Git, Shell</p>
+                        <p>Skill: C/C++, C#, Python, Java, ASP.NET, HTML, CSS, Javascript, Vue, SQL, Git, Shell</p>
                     </div>
                     <div class="col-md-10 col-lg-8 col-xl-4">
                         <p>Interest: Artificial Intelligence, Cybersecurity, Software Development</p>
